--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Warnes&display=swap');
 
+html{
+  height: 100vh;
+}
+
+#root {
+  height: 100%; /* will cover the 100% of viewport */
+}
+
 body {
   background: url('./background.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  margin: 0;
+  padding: 0;
 }
 
 input {
@@ -19,5 +29,4 @@ input {
   color: #fff;
   text-align: center;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #0073e6, 0 0 20px #0073e6, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
-  padding-bottom: 55px;
 }
